# pg_graphwright

./: .gitignore  Cargo.toml  README.md  pg_graphwright.control
.github/workflows/: ci.yml
examples/: README.md  edge-disclosure.sql  gliner-extractor.sql  identity-resolution.sql  rls-visibility.sql  typed-edges.sql
examples/diary/: README.md  demo.sql  onnx.sql  schema.sql
examples/enterprise/: README.md  demo.sql  schema.sql
scripts/: record-demo.sh  smoke-bgworker.sh
src/: lib.rs  resolve.rs
tests/pg_regress/expected/: setup.out
tests/pg_regress/sql/: setup.sql
