[package]
name = "pg_graphwright"
version = "0.1.0"
edition = "2021"
description = "A Postgres extension that maintains a row-level-security-aware knowledge-graph index over documents."
license = "AGPL-3.0-only"
authors = ["Hoofader <info@hoofade.com>"]
repository = "https://github.com/hoofader/pg_graphwright"

[lib]
crate-type = ["cdylib"]

[features]
default = ["pg13"]
pg13 = ["pgrx/pg13", "pgrx-tests/pg13" ]
pg14 = ["pgrx/pg14", "pgrx-tests/pg14" ]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15" ]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16" ]
pg17 = ["pgrx/pg17", "pgrx-tests/pg17" ]
pg18 = ["pgrx/pg18", "pgrx-tests/pg18" ]
pg_test = []
pg_bench = ["dep:pgrx-bench"]

[dependencies]
pgrx = "=0.18.0"

[dependencies.pgrx-bench]
version = "=0.18.0"
optional = true

[dev-dependencies]
[dev-dependencies.pgrx-tests]
version = "=0.18.0"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1
